--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "eslint-config-appfolio-base",
+  "name": "@appfolio/eslint-config-appfolio-base",
   "version": "1.1.0",
   "description": "Appfolio ESLint base config",
   "main": "index.js",
   "author": "Appfolio, Inc.",
   "license": "MIT",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "lint": "eslint .",
     "postpublish": "git push --no-verify && git push --tags"
