--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "postpublish": "git push --no-verify && git push --tags"
   },
   "dependencies": {
-    "eslint": "8.7.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-no-only-tests": "2.6.0",
-    "eslint-plugin-react": "7.28.0"
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-no-only-tests": "^2.6.0",
+    "eslint-plugin-react": "^7.28.0"
   }
 }
