--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@appfolio/eslint-config-appfolio-base",
-  "version": "1.1.1-0",
+  "version": "2.0.0",
   "description": "Appfolio ESLint base config",
   "main": "index.js",
   "author": "Appfolio, Inc.",
